// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component PrivKey - test PrivKey Private - snapshot 1`] = `
<RCTSafeAreaView
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "rgb(242, 242, 242)",
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgb(255, 255, 255)",
        "display": "flex",
        "paddingBottom": 0,
        "paddingTop": 10,
        "zIndex": -1,
      }
    }
    testID="header"
  >
    <Image
      source={
        {
          "testUri": "../../../assets/img/logobig-zingo.png",
        }
      }
      style={
        {
          "height": 80,
          "resizeMode": "contain",
          "width": 80,
        }
      }
    />
    <View
      style={
        {
          "height": 20,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "marginVertical": 5,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "rgb(28, 28, 30)",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          text translated text translated
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "left": 0,
          "padding": 10,
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "width": 48,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "padding": 15,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgb(216, 216, 216)",
            "fontSize": 8,
          }
        }
      >
        text translated
      </Text>
      <Text
        style={
          {
            "color": "rgb(216, 216, 216)",
            "fontSize": 8,
          }
        }
      >
        (undefinedxundefined)-undefined
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "rgb(0, 122, 255)",
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "stretch",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
    style={
      {
        "maxHeight": "85%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "marginBottom": 30,
            "marginTop": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingTop": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgb(28, 28, 30)",
                "marginLeft": 10,
                "marginRight": 10,
                "opacity": 0.65,
                "textAlign": "center",
              }
            }
          >
            text translated
          </Text>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "rgb(28, 28, 30)",
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.65,
                  "textAlign": "center",
                }
              }
            >
              UA-1234567...1234567890
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgb(216, 216, 216)",
              "marginBottom": 20,
              "marginTop": 15,
              "padding": 10,
            }
          }
        >
          <mockQRCode />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgb(28, 28, 30)",
                "marginBottom": 5,
                "minHeight": 48,
                "textDecorationLine": "underline",
              }
            }
          >
            text translated
          </Text>
        </View>
        <Text
          style={
            {
              "color": "rgb(28, 28, 30)",
              "flexBasis": "100%",
              "fontFamily": "verdana",
              "fontSize": 18,
              "opacity": 0.65,
              "textAlign": "center",
            }
          }
        >
          priv-key-123456
        </Text>
        <Text
          style={
            {
              "color": "rgb(28, 28, 30)",
              "flexBasis": "100%",
              "fontFamily": "verdana",
              "fontSize": 18,
              "opacity": 0.65,
              "textAlign": "center",
            }
          }
        >
          78901234567890
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "center",
        "marginVertical": 5,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgb(242, 242, 242)",
          "borderColor": "rgb(0, 122, 255)",
          "borderRadius": 10,
          "borderWidth": 2,
          "justifyContent": "center",
          "maxWidth": "90%",
          "minHeight": 48,
          "minWidth": "30%",
          "opacity": 1,
          "padding": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 48,
            "minWidth": 48,
            "padding": 0,
          }
        }
      >
        <Text
          style={
            {
              "color": "rgb(0, 122, 255)",
              "fontSize": 16,
              "fontWeight": "bold",
              "textTransform": "uppercase",
            }
          }
        >
          text translated
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Component PrivKey - test PrivKey View - snapshot 1`] = `
<RCTSafeAreaView
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "rgb(242, 242, 242)",
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgb(255, 255, 255)",
        "display": "flex",
        "paddingBottom": 0,
        "paddingTop": 10,
        "zIndex": -1,
      }
    }
    testID="header"
  >
    <Image
      source={
        {
          "testUri": "../../../assets/img/logobig-zingo.png",
        }
      }
      style={
        {
          "height": 80,
          "resizeMode": "contain",
          "width": 80,
        }
      }
    />
    <View
      style={
        {
          "height": 20,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "marginVertical": 5,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "rgb(28, 28, 30)",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          text translated text translated
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "left": 0,
          "padding": 10,
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "width": 48,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "padding": 15,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgb(216, 216, 216)",
            "fontSize": 8,
          }
        }
      >
        text translated
      </Text>
      <Text
        style={
          {
            "color": "rgb(216, 216, 216)",
            "fontSize": 8,
          }
        }
      >
        (undefinedxundefined)-undefined
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "rgb(0, 122, 255)",
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "stretch",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
    style={
      {
        "maxHeight": "85%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "marginBottom": 30,
            "marginTop": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingTop": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgb(28, 28, 30)",
                "marginLeft": 10,
                "marginRight": 10,
                "opacity": 0.65,
                "textAlign": "center",
              }
            }
          >
            text translated
          </Text>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "rgb(28, 28, 30)",
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.65,
                  "textAlign": "center",
                }
              }
            >
              UA-1234567...1234567890
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgb(216, 216, 216)",
              "marginBottom": 20,
              "marginTop": 15,
              "padding": 10,
            }
          }
        >
          <mockQRCode />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgb(28, 28, 30)",
                "marginBottom": 5,
                "minHeight": 48,
                "textDecorationLine": "underline",
              }
            }
          >
            text translated
          </Text>
        </View>
        <Text
          style={
            {
              "color": "rgb(28, 28, 30)",
              "flexBasis": "100%",
              "fontFamily": "verdana",
              "fontSize": 18,
              "opacity": 0.65,
              "textAlign": "center",
            }
          }
        >
          view-key-123456
        </Text>
        <Text
          style={
            {
              "color": "rgb(28, 28, 30)",
              "flexBasis": "100%",
              "fontFamily": "verdana",
              "fontSize": 18,
              "opacity": 0.65,
              "textAlign": "center",
            }
          }
        >
          78901234567890
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "center",
        "marginVertical": 5,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgb(242, 242, 242)",
          "borderColor": "rgb(0, 122, 255)",
          "borderRadius": 10,
          "borderWidth": 2,
          "justifyContent": "center",
          "maxWidth": "90%",
          "minHeight": 48,
          "minWidth": "30%",
          "opacity": 1,
          "padding": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 48,
            "minWidth": 48,
            "padding": 0,
          }
        }
      >
        <Text
          style={
            {
              "color": "rgb(0, 122, 255)",
              "fontSize": 16,
              "fontWeight": "bold",
              "textTransform": "uppercase",
            }
          }
        >
          text translated
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
